# cpp-projects

./: .gitignore  README.md
currency-converter/: CMakeLists.txt  Makefile
currency-converter/src/: currency-converter.cpp
dice-poker/: CMakeLists.txt
dice-poker/src/: dice.cpp  dice.h  game.cpp  game.h  main.cpp  player.cpp  player.h
dice-poker/src/dice/: dice.h
dice-poker/src/game/: game.h
dice-poker/src/player/: player.h
num-converter/: CMakeLists.txt  Makefile
num-converter/src/: num-converter.cpp  numconverter.cpp
